fixed spacing issue

--- a/assets/css/simple-grid.css
+++ b/assets/css/simple-grid.css
@@ -22,7 +22,7 @@ body {
 
 * {
   font-family: 'Lato', Helvetica, sans-serif;
-  line-height: 1.5;
+  line-height: 1.0;
 }
 
 /* TYPOGRAPHY */
